--- a/AudioPlayerApp/Views/PlayerPage.xaml
+++ b/AudioPlayerApp/Views/PlayerPage.xaml
@@ -11,7 +11,7 @@
         
         <Style TargetType="Label">
             <Setter Property="TextColor" Value="{DynamicResource PrimaryTextColor}" />
-            <Setter Property="FontSize" Value="16" />
+            <Setter Property="FontSize" Value="16"/>
         </Style>
         
         <Style TargetType="Button" x:Key="ControlButton">
@@ -38,28 +38,40 @@
             
             <!-- Информация о текущем треке -->
             <VerticalStackLayout Spacing="10" HorizontalOptions="Center">
-                <Label Text="{Binding CurrentTrack.Title}" 
+                <Label Text="{Binding CurrentTrack.Title, FallbackValue='Название трека'}" 
                        FontSize="20" 
                        FontAttributes="Bold" 
                        HorizontalOptions="Center" />
-                <Label Text="{Binding CurrentTrack.Artist}" 
-                       FontSize="16" 
-                       HorizontalOptions="Center" />
-                <Label Text="{Binding CurrentTrack.Album}" 
+                <Label Text="{Binding CurrentTrack.Album, FallbackValue='Альбом'}" 
                        FontSize="14" 
                        HorizontalOptions="Center" />
             </VerticalStackLayout>
             
-            <!-- Прогресс воспроизведения -->
             <VerticalStackLayout Spacing="10">
-                <Slider Minimum="0" 
-                        Maximum="{Binding Duration}" 
-                        Value="{Binding Position}"/>
+                <Grid HorizontalOptions="Fill" ColumnSpacing="10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" /> <!-- Слайдер занимает всё доступное пространство -->
+                        <ColumnDefinition Width="Auto" /> <!-- Кнопка занимает столько места, сколько нужно -->
+                    </Grid.ColumnDefinitions>
+    
+                    <Slider Grid.Column="0"
+                            Minimum="0" 
+                            Maximum="{Binding Duration.TotalSeconds}" 
+                            Value="{Binding SliderPosition, Mode=TwoWay}"
+                            DragStarted="OnSliderDragStarted"
+                            DragCompleted="OnSliderDragCompleted"
+                            HorizontalOptions="FillAndExpand"/>
+    
+                    <Button Grid.Column="1"
+                            Text="{Binding PlaybackSpeed, StringFormat='{0}x'}" 
+                            Command="{Binding ChangeSpeedCommand}"
+                            Style="{StaticResource SmallControlButton}" />
+                </Grid>
                 
                 <HorizontalStackLayout HorizontalOptions="Center" Spacing="10">
-                    <Label Text="{Binding CurrentTimeFormatted}" />
+                    <Label Text="{Binding CurrentTimeFormatted, FallbackValue='00:00'}" />
                     <Label Text="/" />
-                    <Label Text="{Binding TotalTimeFormatted}" />
+                    <Label Text="{Binding TotalTimeFormatted, FallbackValue='00:00'}" />
                 </HorizontalStackLayout>
             </VerticalStackLayout>
             
@@ -71,32 +83,13 @@
                 
                 <Button Text="{Binding IsPlaying, Converter={StaticResource BoolToPlayPauseConverter}}"
                         Command="{Binding PlayPauseCommand}"
-                        Style="{StaticResource ControlButton}" />
+                        Style="{StaticResource ControlButton}" 
+                        FontSize="16"/>
                 
                 <Button Text="⏭" 
                         Command="{Binding PlayNextCommand}"
                         Style="{StaticResource SmallControlButton}" />
             </HorizontalStackLayout>
-            
-            <!-- Дополнительные элементы управления -->
-            <HorizontalStackLayout HorizontalOptions="Center" Spacing="10">
-                <Button Text="⏹" 
-                        Command="{Binding StopCommand}"
-                        Style="{StaticResource SmallControlButton}" />
-                
-                <Button Text="⏪" 
-                        Command="{Binding SeekBackwardCommand}"
-                        Style="{StaticResource SmallControlButton}" />
-                
-                <Button Text="⏩" 
-                        Command="{Binding SeekForwardCommand}"
-                        Style="{StaticResource SmallControlButton}" />
-                
-                <Button Text="{Binding PlaybackSpeed, StringFormat='{0}x'}" 
-                        Command="{Binding ChangeSpeedCommand}"
-                        Style="{StaticResource SmallControlButton}" />
-            </HorizontalStackLayout>
-            
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
