--- a/AudioPlayerApp/Views/PlaylistEditorPage.xaml
+++ b/AudioPlayerApp/Views/PlaylistEditorPage.xaml
@@ -2,7 +2,11 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:AudioPlayerApp.Views"
-             x:Class="AudioPlayerApp.Views.PlaylistEditorPage" x:Name="ThisPage"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
+             x:Class="AudioPlayerApp.Views.PlaylistEditorPage"
+             x:Name="ThisPage"
              Title="Редактор плейлистов"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
 
@@ -11,16 +15,27 @@
             <RowDefinition Height="2*" />
             <RowDefinition Height="3*" />
         </Grid.RowDefinitions>
-
-        <!-- Список плейлистов -->
+        
         <CollectionView ItemsSource="{Binding Playlists}"
                         SelectionMode="Single"
                         SelectedItem="{Binding SelectedPlaylist}">
             <CollectionView.Header>
                 <Button Text="Добавить плейлист"
-                        Command="{Binding AddPlaylistCommand}"
+                        Command="{Binding Source={x:Reference ThisPage}, Path=BindingContext.AddPlaylistCommand}"
                         Margin="0,0,0,10" />
             </CollectionView.Header>
+
+            <CollectionView.EmptyView>
+                <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
+                    <Label Text="Нет плейлистов" 
+                           FontSize="16"
+                           HorizontalOptions="Center" />
+                    <Label Text="Нажмите «Добавить плейлист», чтобы создать первый плейлист."
+                           FontSize="14"
+                           HorizontalOptions="Center"
+                           Margin="0,10,0,0" />
+                </StackLayout>
+            </CollectionView.EmptyView>
 
             <CollectionView.ItemTemplate>
                 <DataTemplate>
@@ -36,19 +51,24 @@
                                        CommandParameter="{Binding}" />
                         </SwipeView.RightItems>
 
-                        <Grid Padding="10">
+                        <Grid Padding="10" BackgroundColor="LightGray">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
 
-                            <Label Text="{Binding Name}"
-                                   FontSize="16" />
-
+                            <Label Text="{Binding Name}" FontSize="16" FontAttributes="Bold">
+                                <Label.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding Source={x:Reference ThisPage}, Path=BindingContext.SelectPlaylistCommand}" 
+                                                          CommandParameter="{Binding}" />
+                                </Label.GestureRecognizers>
+                            </Label>
+                            
                             <Button Text="Добавить треки"
                                     Command="{Binding Source={x:Reference ThisPage}, Path=BindingContext.AddTrackToPlaylistCommand}"
                                     CommandParameter="{Binding}"
-                                    Grid.Column="1" />
+                                    Grid.Column="2" />
                         </Grid>
                     </SwipeView>
                 </DataTemplate>
@@ -60,23 +80,57 @@
                         ItemsSource="{Binding SelectedPlaylist.Tracks}"
                         SelectionMode="Single"
                         SelectedItem="{Binding SelectedTrack}">
+            <CollectionView.EmptyView>
+                <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
+                    <Label Text="Выберите плейлист для просмотра треков" 
+                           FontSize="16"
+                           HorizontalOptions="Center" />
+                    <Label Text="или добавьте треки в выбранный плейлист"
+                           FontSize="14"
+                           HorizontalOptions="Center" />
+                </StackLayout>
+            </CollectionView.EmptyView>
+
             <CollectionView.Header>
-                <Label Text="Треки в плейлисте" FontSize="18" Margin="0,10,0,5" />
+                <StackLayout>
+                    <Label Text="Треки в плейлисте" FontSize="18" Margin="0,10,0,5" />
+                    <Label Text="{Binding SelectedPlaylist.Name, StringFormat='Плейлист: {0}'}" 
+                           FontSize="14" 
+                           Margin="0,0,0,10" />
+                </StackLayout>
             </CollectionView.Header>
 
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <Grid Padding="5">
+                    <Grid Padding="10" BackgroundColor="#f0f0f0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
 
-                        <Label Text="{Binding Title}" />
-                        <Button Text="Удалить"
+                        <VerticalStackLayout>
+                            <Label Text="{Binding Title}" FontSize="16" FontAttributes="Bold" />
+                            <Label Text="{Binding Artist}" FontSize="14" />
+                            <Label Text="{Binding Duration, StringFormat='Длительность: {0:hh\\:mm\\:ss}'}" 
+                                   FontSize="12" 
+                                   TextColor="Gray" />
+                        </VerticalStackLayout>
+                        
+                        <Button Text="▶"
+                                Command="{Binding Source={x:Reference ThisPage}, Path=BindingContext.SelectTrackCommand}"
+                                CommandParameter="{Binding}" 
+                                Grid.Column="1"
+                                BackgroundColor="Blue"
+                                TextColor="White"
+                                Margin="5,0"/>
+                                
+                        <Button Text="🗑️"
                                 Command="{Binding Source={x:Reference ThisPage}, Path=BindingContext.RemoveTrackFromPlaylistCommand}"
                                 CommandParameter="{Binding}" 
-                                Grid.Column="1"/>
+                                Grid.Column="2"
+                                BackgroundColor="Red"
+                                TextColor="White"/>
                     </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
